Remove DumpWithoutCrashing in RouteGestureEvent.

This DumpWithoutCrashing is not providing useful diagnostics, and is
generating a lot of noise in the crash reports. We are removing it and pursuing other avenues for debugging.

BUG=595422
TBR=creis@chromium.org

Review-Url: https://codereview.chromium.org/2207993002
Cr-Commit-Position: refs/heads/master@{#409525}

Former-commit-id: 87022427432ab8ab1d11a4d6e1143bdfeb9c12ee