content/browser/renderer_host/render_widget_host_input_event_router.cc
@@ -4,7 +4,6 @@
 
 #include "content/browser/renderer_host/render_widget_host_input_event_router.h"
 
-#include "base/debug/dump_without_crashing.h"
 #include "cc/quads/surface_draw_quad.h"
 #include "cc/surfaces/surface_id_allocator.h"
 #include "cc/surfaces/surface_manager.h"
@@ -406,7 +405,6 @@ void RenderWidgetHostInputEventRouter::RouteTouchscreenGestureEvent(
       // TODO(wjmaclean): this only happens on Windows, and should not happen.
       // https://crbug.com/595422
       touchscreen_gesture_target_.target = nullptr;
-      base::debug::DumpWithoutCrashing();
       return;
     }
 
